--- a/ProteinInterestApi/ProteinInterestApi/ProteinBankApi.csproj
+++ b/ProteinInterestApi/ProteinInterestApi/ProteinBankApi.csproj
@@ -7,6 +7,7 @@
   <ItemGroup>
     <PackageReference Include="FluentValidation.AspNetCore" Version="11.1.2" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
+    <PackageReference Include="System.Configuration.ConfigurationManager" Version="6.0.0" />
   </ItemGroup>
 
 </Project>
